--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,62 @@
-MongooseServerSelectionError: getaddrinfo ENOTFOUND mongodb.safra-data
-    at _handleConnectionErrors (h:\Documents\fee-management-backend\node_modules\mongoose\lib\connection.js:755:11)
-    at NativeConnection.openUri (H:\Documents\fee-management-backend\node_modules\mongoose\lib\connection.js:730:11) {message: 'getaddrinfo ENOTFOUND mongodb.safra-data', reason: TopologyDescription, code: undefined, stack: 'MongooseServerSelectionError: getaddrinfo ENO…modules\\mongoose\\lib\\connection.js:730:11)'}
-
-index.js:13
-Exceptions from SQL: (3) [{…}, {…}, {…}]
-feeGetByCifUseCase.js:166
-Grouped Fees: (3) [{…}, {…}, {…}]
-feeGetByCifUseCase.js:33
-Accounts: (26) [{…}, {…}, {…}, {…}, {…}, {…}, {…}, {…}, {…}, {…}, {…}, {…}, {…}, {…}, {…}, {…}, {…}, {…}, {…}, {…}, {…}, {…}, {…}, {…}, {…}, {…}]
-feeGetByCifUseCase.js:34
-Exception group is missing
-
-
-dash.dev.k8s.safra.int:27017
+{
+  // Use IntelliSense to learn about possible attributes.
+  // Hover to view descriptions of existing attributes.
+  // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
+  "version": "0.2.0",
+  "configurations": [
+    {
+      "type": "node",
+      "request": "launch",
+      "name": "Api",
+      "skipFiles": [
+        "<node_internals>/**"
+      ],
+      "program": "${workspaceFolder}/src/app/api/index.js",
+      "env": {
+        "NODE_ENV": "Local",
+        "APP_NAME": "snb-fee-management",
+        "CONFIG_SERVER_APP_NAME": "snb-fee-management",
+        "CONFIG_SERVER_URL": "https://config.dev.k8s.safra.int",
+        "CONFIG_SERVER_USER": "safraconfigserver",
+        "CONFIG_SERVER_PASSWORD": "Sc$7@gfwertrlM22",
+        "SERVER_PORT": "3333",
+        "MONGODB_URI": "mongodb://mongodbsnb:rstNze28W6@dash.dev.k8s.safra.int:27017/snb",
+        "SQLSERVER_SERVER": "nydev01.snb.safra.int",
+        "SQLSERVER_USER": "userFeeMgmtConductor",
+        "SQLSERVER_PASSWORD": "userF33MgmtCond",
+        "SQLSERVER_DATABASE": "FeeMgmt"
+      }
+    },
+    {
+      "type": "node",
+      "request": "launch",
+      "name": "Worker",
+      "skipFiles": [
+        "<node_internals>/**"
+      ],
+      "program": "${workspaceFolder}/src/app/worker/index.js",
+      "args": [
+        "relative path inside src/worker/namePathWorker/nameFileWorker.js"
+      ],
+      "env": {
+        "NODE_ENV": "Local",
+        "CONFIG_SERVER_APP_NAME": "config-server-app-name",
+        "CONFIG_SERVER_URL": "https://config.dev.k8s.safra.int",
+        "CONFIG_SERVER_USER": "safraconfigserver",
+        "CONFIG_SERVER_PASSWORD": "Sc$7@gfwertrlM22"
+      }
+    },
+    {
+      "type": "node",
+      "request": "launch",
+      "name": "Seed",
+      "skipFiles": [
+        "<node_internals>/**"
+      ],
+      "program": "${workspaceFolder}/src/core/data/seeds/run.js",
+      "env": {
+        "NODE_ENV": "Local"
+      }
+    }
+  ]
+}
