--- a/.gitignore
+++ b/.gitignore
@@ -1,62 +1,159 @@
 {
-  // Use IntelliSense to learn about possible attributes.
-  // Hover to view descriptions of existing attributes.
-  // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
-  "version": "0.2.0",
-  "configurations": [
-    {
-      "type": "node",
-      "request": "launch",
-      "name": "Api",
-      "skipFiles": [
-        "<node_internals>/**"
-      ],
-      "program": "${workspaceFolder}/src/app/api/index.js",
-      "env": {
-        "NODE_ENV": "Local",
-        "APP_NAME": "snb-fee-management",
-        "CONFIG_SERVER_APP_NAME": "snb-fee-management",
-        "CONFIG_SERVER_URL": "https://config.dev.k8s.safra.int",
-        "CONFIG_SERVER_USER": "safraconfigserver",
-        "CONFIG_SERVER_PASSWORD": "Sc$7@gfwertrlM22",
-        "SERVER_PORT": "3333",
-        "MONGODB_URI": "mongodb://mongodbsnb:rstNze28W6@dash.dev.k8s.safra.int:27017/snb",
-        "SQLSERVER_SERVER": "nydev01.snb.safra.int",
-        "SQLSERVER_USER": "userFeeMgmtConductor",
-        "SQLSERVER_PASSWORD": "userF33MgmtCond",
-        "SQLSERVER_DATABASE": "FeeMgmt"
-      }
-    },
-    {
-      "type": "node",
-      "request": "launch",
-      "name": "Worker",
-      "skipFiles": [
-        "<node_internals>/**"
-      ],
-      "program": "${workspaceFolder}/src/app/worker/index.js",
-      "args": [
-        "relative path inside src/worker/namePathWorker/nameFileWorker.js"
-      ],
-      "env": {
-        "NODE_ENV": "Local",
-        "CONFIG_SERVER_APP_NAME": "config-server-app-name",
-        "CONFIG_SERVER_URL": "https://config.dev.k8s.safra.int",
-        "CONFIG_SERVER_USER": "safraconfigserver",
-        "CONFIG_SERVER_PASSWORD": "Sc$7@gfwertrlM22"
-      }
-    },
-    {
-      "type": "node",
-      "request": "launch",
-      "name": "Seed",
-      "skipFiles": [
-        "<node_internals>/**"
-      ],
-      "program": "${workspaceFolder}/src/core/data/seeds/run.js",
-      "env": {
-        "NODE_ENV": "Local"
-      }
+  app: {
+    name: "SNB FEE MANAGEMENT",
+  },
+  server: {
+    port: 5000,
+    maxRequestBodySize: "100mb",
+  },
+  logging: {
+    level: "debug",
+    file: "/var/log/http.log",
+  },
+  kafka: {
+    brokers: [
+    ],
+  },
+  rabbitmq: {
+    url: "",
+  },
+  mongo: {
+    autoIndex: true,
+    keepAlive: true,
+    uri: "mongodb://mongodbsnb:rstNze28W6@mongodb.safra-data:27017/snb",
+  },
+  caseUrl: "https://casemanagement-api.dev.k8s.safra.int",
+  sqlserver: {
+    server: "nydev01.snb.safra.int",
+    user: "userFeeMgmtConductor",
+    password: "userF33MgmtCond",
+    database: "FeeMgmt",
+  },
+  scheduleUrls: {
+    intlPB3: "https://minio-ui.dev.k8s.safra.int/api/v1/buckets/conductor-public/objects/download?preview=true&prefix=U2NoZWR1bGVvZkZlZXNJbnRsUEIzLlBERg==&version_id=null",
+    uSPBCorporation3: "https://minio-ui.dev.k8s.safra.int/api/v1/buckets/conductor-public/objects/download?preview=true&prefix=U2NoZWR1bGVvZkZlZXNVU1BCQ29ycG9yYXRpb24zLnBkZg==&version_id=null",
+    uSPBIndividual3: "https://minio-ui.dev.k8s.safra.int/api/v1/buckets/conductor-public/objects/download?preview=true&prefix=U2NoZWR1bGVvZkZlZXNVU1BCSW5kaXZpZHVhbDMucGRm&version_id=null",
+    eraPB3: "https://minio-ui.dev.k8s.safra.int/api/v1/buckets/conductor-public/objects/download?preview=true&prefix=U2NoZWR1bGVvZkZlZXNVU1BCSW5kaXZpZHVhbDMucGRm&version_id=null",
+    efraPB3: "https://minio-ui.dev.k8s.safra.int/api/v1/buckets/conductor-public/objects/download?preview=true&prefix=U2NoZWR1bGVvZkZlZXNVU1BCQ29ycG9yYXRpb24zLnBkZg==&version_id=null",
+  },
+  conductorUrl: "https://conductor-ui.dev.k8s.safra.int/api/workflow",
+}
+
+
+import dotenv from 'dotenv'
+import path from 'path'
+import fs from 'fs'
+import configServer from 'nice-cloud-config-client'
+
+import environment from './environment.js'
+import { createLogger } from '#core/logging/index.js'
+import { configureEnvironmentConfigServer } from './configureEnvironment.js'
+
+export default class Config {
+  #env
+  #logger
+
+  constructor(env = process.env.NODE_ENV) {
+    this.#env = env || 'Local'
+    // this.#logger = createLogger(environment)
+  }
+
+  async bootstrap() {
+    // this.#logger.info(`Starting configuration for env: ${this.#env}`)
+
+    const strategies = new Map()
+    strategies.set('local', this.#loadFromConfigServer.bind(this))
+    strategies.set('development', this.#loadFromConfigServer.bind(this))
+    strategies.set('staging', this.#loadFromConfigServer.bind(this))
+    strategies.set('production', this.#loadFromConfigServer.bind(this))
+
+    const strategyForEnvironment = strategies.get(this.#env.toLocaleLowerCase())
+    const environmentWithValues = await strategyForEnvironment()
+
+    Object.freeze(environmentWithValues)
+
+    // Create a new logger using the final configuration
+    // this.#logger = createLogger(environmentWithValues)
+
+    return environmentWithValues
+  }
+
+  logger() {
+    return this.#logger
+  }
+
+  async #loadEnvFromFile() {
+    const envFile = '.env'
+    const envPath = path.resolve(path.dirname(''), envFile)
+
+    // this.#logger.info(`Loading env using file ${envPath}`)
+
+    if (fs.existsSync(envPath)) {
+      dotenv.config({ path: envPath })
     }
-  ]
+
+    environment.app.name = process.env.APP_NAME
+    environment.server.port = process.env.SERVER_PORT
+    environment.server.maxRequestBodySize =
+      process.env.SERVER_MAX_REQUEST_BODY_SIZE
+    environment.logging.level = process.env.LOGGING_LEVEL
+    environment.kafka.brokers = process.env.KAFKA_BROKERS?.split(',')
+    environment.rabbitmq.url = process.env.RABBITMQ_URL
+    environment.mongo.uri = process.env.MONGODB_URI
+    environment.caseUrl = process.env.CASE_URL
+    environment.conductorUrl = process.env.CONDUCTOR_URL
+    environment.sqlserver.server = process.env.SQLSERVER_SERVER
+    environment.sqlserver.user = process.env.SQLSERVER_USER
+    environment.sqlserver.password = process.env.SQLSERVER_PASSWORD
+    environment.sqlserver.database = process.env.SQLSERVER_DATABASE
+
+    return environment
+  }
+
+  async #loadFromConfigServer() {
+    const configServerAppName = process.env.CONFIG_SERVER_APP_NAME
+    const configServerUrl = process.env.CONFIG_SERVER_URL
+    const configServerUser = process.env.CONFIG_SERVER_USER
+    const configServerPassword = process.env.CONFIG_SERVER_PASSWORD
+
+    if (!configServerAppName) {
+      throw new Error('Application name must be provided')
+    }
+
+    if (!configServerUrl) {
+      throw new Error('Config server url must be provided')
+    }
+
+    if (!configServerUser) {
+      throw new Error('Config server user must be provided')
+    }
+
+    if (!configServerPassword) {
+      throw new Error('Config server password must be provided')
+    }
+
+    // this.#logger.info(`Loading env using config server ${configServerUrl}`)
+
+    const configuration = await configServer.load({
+      rejectUnauthorized: false,
+      name: configServerAppName,
+      endpoint: configServerUrl,
+      profiles: this.#env,
+      auth: {
+        user: configServerUser,
+        pass: configServerPassword
+      }
+    })
+
+    if (configuration instanceof Error) {
+      throw configuration
+    }
+
+    return configureEnvironmentConfigServer(
+      environment,
+      configuration.properties,
+      '.',
+      configuration
+    )
+  }
 }
